apps/homelab/kavita/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: kavita
  labels:
    app.kubernetes.io/instance: kavita
    app.kubernetes.io/name: kavita
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
      app.kubernetes.io/instance: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kavita
        app.kubernetes.io/instance: kavita
    spec:
      containers:
        - name: kavita
          image: linuxserver/kavita:0.8.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: data
          persistentVolumeClaim:
            claimName: data
