apps/homelab/kavita/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: kavita
  labels:
    app.kubernetes.io/service: kavita
    app.kubernetes.io/instance: kavita
    app.kubernetes.io/name: kavita
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: kavita
    app.kubernetes.io/name: kavita
