apps/homelab/kavita/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: kavita
  labels:
    app.kubernetes.io/instance: kavita
    app.kubernetes.io/name: kavita
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - "books.homelab.rookian.dev"
      secretName: "tls-books-homelab"
  rules:
    - host: "books.homelab.rookian.dev"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: kavita
                port:
                  number: 5000
